# kaza

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  SECURITY.md  app.py  backup.py  docker-compose.yml  pyproject.toml  recipes.py  requirements-dev.txt  requirements.txt  stats.py  wsgi.py
.github/workflows/: ci.yml
docs/screenshots/: README.md
kaza/: __init__.py  auth.py  config.py  db.py  email.py  logging_setup.py  recipe_book.py  security.py  utils.py
kaza/data/recipes/: 00_core.json  10_pasta_italian.json  20_israeli.json  30_soups_stews.json  40_chicken_meat.json  50_fish_veg.json  60_breakfast_salads_sides.json  70_asian_world.json  80_baking_desserts.json
kaza/models/: __init__.py  backup.py  bulletin.py  chores.py  finance.py  households.py  password_resets.py  private_expenses.py  recipes.py  shopping.py  users.py
kaza/routes/: __init__.py  auth.py  bills.py  bulletin.py  chores.py  finance.py  households.py  personal.py  shopping.py  state.py  system.py
kaza/services/: __init__.py  accounts.py  finance.py  households.py  notifications.py  recipes.py  state.py
static/: index.html  manifest.webmanifest
tests/: api_test.py  backup_test.py  bills_test.py  bulletin_test.py  db_test.py  delete_test.py  leave_test.py  logging_test.py  monthly_test.py  notif_test.py  password_reset_test.py  personal_test.py  recipe_test.py  run_all.py  security_test.py
